# PANs

./: .env.example  .env.local  .gitignore  App.tsx  Dockerfile.frontend  LICENSE  README.md  docker-compose.yml  index.html  metadata.json  package-lock.json  package.json  types.ts
backend/: Dockerfile  main.py  models.py  pyproject.toml
backend/scenarios/: attack_scenarios.py
backend/services/: attacker.py  defender.py  judge.py  providers.py
components/: AnalyticsDashboard.tsx  BattleFeed.tsx  LivePanel.tsx
services/: api.ts  audioUtils.ts  gemini.ts  mockData.ts
